--- a/client/src/components/schedule-column/slot/Day.css
+++ b/client/src/components/schedule-column/slot/Day.css
@@ -11,7 +11,7 @@
     transition: transform .2s ease-out;
 }
 
-/* maybe for fancier ui?
+/* maybe for fancier ui
 #Monday {
     background-color: red;
 }
